test/force-app/main/default/objects/Proxy_Document__c/Proxy_Document__c.object-meta.xml
<CustomObject>
    <label>Proxy Document</label>
    <nameField>
        <label>Proxy Projet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proxy Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>