test/force-app/main/default/objects/Proxy_Document__c/fields/DOC_ADR_DEST_Nom_Prenom__c.field-meta.xml
<CustomField>
    <fullName>DOC_ADR_DEST_Nom_Prenom__c</fullName>
    <label>DOC ADR DEST Nom Prénom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>