test/force-app/main/default/objects/Proxy_Document__c/fields/DOC_Brouillon__c.field-meta.xml
<CustomField>
    <fullName>DOC_Brouillon__c</fullName>
    <label>DOC Brouillon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>