test/force-app/main/default/objects/Proxy_Document__c/fields/DOC_Condition_paiement__c.field-meta.xml
<CustomField>
    <fullName>DOC_Condition_paiement__c</fullName>
    <label>DOC Condition paiement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>