test/force-app/main/default/objects/Proxy_Document__c/fields/DOC_Date_creation__c.field-meta.xml
<CustomField>
    <fullName>DOC_Date_creation__c</fullName>
    <label>DOC Date creation</label>
    <type>Date</type>
</CustomField>