test/force-app/main/default/objects/Proxy_Document__c/fields/DOC_DEB_Doc_suppr__c.field-meta.xml
<CustomField>
    <fullName>DOC_DEB_Doc_suppr__c</fullName>
    <label>DOC DEB Doc suppr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>