test/force-app/main/default/objects/Proxy_Document__c/fields/DOC_DEB_Monnaie__c.field-meta.xml
<CustomField>
    <fullName>DOC_DEB_Monnaie__c</fullName>
    <label>DOC DEB Monnaie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>