test/force-app/main/default/objects/Proxy_Document__c/fields/DOC_DEB_Montant__c.field-meta.xml
<CustomField>
    <fullName>DOC_DEB_Montant__c</fullName>
    <label>DOC DEB Montant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>