test/force-app/main/default/objects/Proxy_Document__c/fields/DOC_DEB_Solde_a_paye_ME__c.field-meta.xml
<CustomField>
    <fullName>DOC_DEB_Solde_a_paye_ME__c</fullName>
    <label>DOC DEB Solde a paye ME</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>