test/force-app/main/default/objects/Proxy_Document__c/fields/DOC_Description__c.field-meta.xml
<CustomField>
    <fullName>DOC_Description__c</fullName>
    <label>DOC Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>