test/force-app/main/default/objects/Proxy_Document__c/fields/DOC_Etat_Commande__c.field-meta.xml
<CustomField>
    <fullName>DOC_Etat_Commande__c</fullName>
    <label>DOC Etat Commande</label>
    <length>255</length>
    <type>Text</type>
</CustomField>