test/force-app/main/default/objects/Proxy_Document__c/fields/DOC_Etat_doc__c.field-meta.xml
<CustomField>
    <fullName>DOC_Etat_doc__c</fullName>
    <label>DOC Etat doc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>