test/force-app/main/default/objects/Proxy_Document__c/fields/DOC_Genre_document__c.field-meta.xml
<CustomField>
    <fullName>DOC_Genre_document__c</fullName>
    <label>DOC Genre document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>