test/force-app/main/default/objects/Proxy_Document__c/fields/DOC_No_ref__c.field-meta.xml
<CustomField>
    <fullName>DOC_No_ref__c</fullName>
    <label>DOC No ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>