test/force-app/main/default/objects/Proxy_Document__c/fields/DOC_Projet_ID__c.field-meta.xml
<CustomField>
    <fullName>DOC_Projet_ID__c</fullName>
    <label>DOC Projet ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>