test/force-app/main/default/objects/Proxy_Document__c/fields/Erreurs__c.field-meta.xml
<CustomField>
    <fullName>Erreurs__c</fullName>
    <label>Erreurs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>