test/force-app/main/default/objects/Proxy_Document__c/fields/ID_Journal_commande__c.field-meta.xml
<CustomField>
    <fullName>ID_Journal_commande__c</fullName>
    <label>ID Journal commande</label>
    <length>255</length>
    <type>Text</type>
</CustomField>