test/force-app/main/default/objects/Proxy_Document__c/fields/ID_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>ID_Salesforce__c</fullName>
    <label>ID Salesforce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>