test/force-app/main/default/objects/Proxy_Document__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reçu</fullName>
                <default>true</default>
                <label>Reçu</label>
            </value>
            <value>
                <fullName>Erreur</fullName>
            </value>
            <value>
                <fullName>Succès</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>