test/force-app/main/default/objects/Proxy_Document__c/fields/TextAdress__c.field-meta.xml
<CustomField>
    <fullName>TextAdress__c</fullName>
    <formula>Text(DOC_ADR_DEST_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TextAdress</label>
    <type>Text</type>
</CustomField>