test/force-app/main/default/objects/Proxy_Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DOC_Projet_ID__c</columns>
    <columns>DOC_ADR_DEST_ID__c</columns>
    <columns>Statut__c</columns>
    <columns>Action__c</columns>
    <columns>Date_Traitement__c</columns>
    <columns>ID_Salesforce__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>